monitoring/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.dev-cluster.k8s.miribit.lab
    http:
      paths:
      - backend:
          service:
            name: monitoring-grafana
            port:
              number: 80
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.dev-cluster.k8s.miribit.lab
    http:
      paths:
      - backend:
          service:
            name: monitoring-kube-prometheus-prometheus
            port:
              number: 9090
        path: /
        pathType: Prefix
